fix sticky footer issue on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ h3 {
     margin-top: 22px;
   }
   article {
-    margin-bottom: 50px;
+    padding-bottom: 50px;
   }
   .heart-ciclovia {
     margin-top: 0px;
